# dspy-optimizer

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  pyproject.toml
.roo/rules/: 01-dspy-optimizer-overview.md  02-general-behavior.md
dspy_optimizer/: __init__.py  evaluator.py  invoice_amount_optimizer.py  models.py  optimizer.py  utils.py
dspy_optimizer/callback/: __init__.py  base.py  history_callback.py  mlflow_callback.py
dspy_optimizer/refiner/: __init__.py  refiner.py  signature.py
dspy_optimizer/strategies/: __init__.py  registry.py
dspy_optimizer/strategies/merger/: base.py  block_based.py
dspy_optimizer/strategies/scoring/: common.py
dspy_optimizer/strategies/validation/: __init__.py  base.py  batched.py  full.py  no_validation.py  sample.py  single_example.py
tests/: conftest.py
tests/callback/: test_history_callback.py  test_mlflow_callback.py
tests/dspy_optimizer/: test_callback.py  test_evaluator.py  test_models.py  test_optimizer.py
tests/dspy_optimizer/refiner/: test_refiner.py
tests/dspy_optimizer/strategies/: test_registry.py
tests/dspy_optimizer/strategies/merger/: test_block_based.py
tests/dspy_optimizer/strategies/scoring/: test_common_scorers.py
tests/dspy_optimizer/strategies/validation/: test_new_validation_strategies.py  test_validation_strategies.py
